fixed layout issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -23,7 +23,7 @@
     bottom: 0;
 }
 
-.chat-room > row {
+.chat-room > .row {
     height: 100%;
 }
 
